...
		static let bulletPoint1 = "AppStrings.NotificationSettings.bulletPoint1"
		static let bulletPoint2 = "AppStrings.NotificationSettings.bulletPoint2"
		static let bulletPoint3 = "AppStrings.NotificationSettings.bulletPoint3"
		static let bulletDesc2 = "AppStrings.NotificationSettings.bulletDesc2"
		
		static let openSystemSettings = "AppStrings.NotificationSettings.openSystemSettings"
		static let close = "AppStrings.NotificationSettings.DeltaOnboarding.primaryButtonTitle"
	}
	
	enum Home {
		static let leftBarButtonDescription = "AppStrings.Home.leftBarButtonDescription"
		static let rightBarButtonDescription = "AppStrings.Home.rightBarButtonDescription"
		static let activateCardOnTitle = "AppStrings.Home.activateCardOnTitle"
		static let activateCardOffTitle = "AppStrings.Home.activateCardOffTitle"
		static let activateCardBluetoothOffTitle = "AppStrings.Home.activateCardBluetoothOffTitle"
		static let riskCardIntervalUpdateTitle = "AppStrings.Home.riskCardIntervalUpdateTitle"
		static let tableView = "AppStrings.Home.tableView"

		enum AppClosureNoticeCell {
			static let container = "AppStrings.Home.AppClosureNoticeCell.container"
			
			enum Details {
				static let image = "AppStrings.Home.AppClosureNoticeCell.Details.image"
...
		enum TestRegistrationCell {
			static let titleLabel = "AppStrings.Home.TestRegistrationCell.titleLabel"
			static let descriptionLabel = "AppStrings.Home.TestRegistrationCell.descriptionLabel"
			static let submitCardButton = "AppStrings.Home.TestRegistrationCell.submitCardButton"
		}
		
		static let traceLocationsCardButton = "AppStrings.Home.traceLocationsCardButton"

		enum Alerts {
			static let anotherHighExposureButtonOK = "AppStrings.Home.riskStatusAnotherHighExposureButtonTitle"
		}

	}
...
	enum ContactDiary {
		static let segmentedControl = "AppStrings.ContactDiary.Day"
		static let dayTableView = "AppStrings.ContactDiary.Day.TableView"
	}
	
	enum ContactDiaryInformation {
		static let imageDescription = "AppStrings.ContactDiaryInformation.imageDescription"
		static let descriptionTitle = "AppStrings.ContactDiaryInformation.descriptionTitle"
		static let descriptionSubHeadline = "AppStrings.ContactDiaryInformation.descriptionSubHeadline"
		static let dataPrivacyTitle = "AppStrings.ContactDiaryInformation.dataPrivacyTitle"
		static let legal_1 = "AppStrings.ContactDiaryInformation.legalHeadline_1"
		
		enum Day {
			static let cellView = "AppStrings.ContactDiaryInformation.cellView-%d"
			static let headerStackView = "AppStrings.ContactDiaryInformation.headerStackView-%d"
			static let checkboxImageView = "AppStrings.ContactDiaryInformation.checkboxImageView-%d"
...
		static let answerOptionCountry = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.answerOptionCountry"
		static let answerOptionOtherCountries = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.answerOptionOtherCountries"
		static let answerOptionNone = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.answerOptionNone"
	}
	
	enum ExposureSubmission {
		static let primaryButton = "AppStrings.ExposureSubmission.primaryButton"
		static let secondaryButton = "AppStrings.ExposureSubmission.secondaryButton"

		enum OverwriteNotice {
			static let imageDescription = "AppStrings.ExposureSubmission.OverwriteNotice.imageDescription"

			enum Pcr {
...
	}
	
	enum General {
		static let exposureSubmissionNavigationControllerTitle = "ExposureSubmissionNavigationController"
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
		static let defaultButton = "General.defaultButton"
		static let deleteButton = "General.deleteButton"
		static let webView = "HTMLView"
	}
	
...
	}

	enum TabBar {
		static let home = "TabBar.home"
		static let certificates = "TabBar.certificates"
		static let scanner = "TabBar.scanner"
		static let checkin = "TabBar.checkin"
		static let diary = "TabBar.diary"
	}
	
	enum DataDonation {
		static let accImageDescription = "AppStrings.DataDonation.Info.accImageDescription"
		static let accDataDonationTitle = "AppStrings.DataDonation.Info.title"
		static let accDataDonationDescription = "AppStrings.DataDonation.Info.description"
...
		
		enum Details {
			static let printVersionButton = "AppStrings.TraceLocations.Details.printVersionButtonTitle"
			static let duplicateButton = "AppStrings.TraceLocations.Details.duplicateButtonTitle"
			static let titleLabel = "AppStrings.TraceLocations.Details.titleLabel"
			static let locationLabel = "AppStrings.TraceLocations.Details.locationLabel"
			static let checkInButton = "AppStrings.Checkins.Details.checkInButton"
		}
		
		enum Overview {
			static let tableView = "TableView.TracelocationOverview"
			static let menueButton = "AppStrings.TraceLocations.Overview.menueButton"
			static let addButton = "AppStrings.TraceLocations.Overview.addButton"
			static let emptyStateImage = "AppStrings.TraceLocations.Overview.emptyStateImage"
			static let emptyStateTitle = "AppStrings.TraceLocations.Overview.emptyStateTitle"
			static let emptyStateDescription = "AppStrings.TraceLocations.Overview.emptyStateDescription"
			static let eventTableViewCellTitleLabel = "AppStrings.TraceLocations.Overview.eventTableViewCell.titleLabel"
			static let eventTableViewCellAddressLabel = "AppStrings.TraceLocations.Overview.eventTableViewCell.addressLabel"
...
				static let editAction = "AppStrings.TraceLocations.Overview.MenuActionSheet.editAction"
			}
		}
		
		enum Configuration {
			static let traceLocationTypeLabel = "AppStrings.TraceLocations.Configuration.traceLocationTypeLabel"
			static let descriptionPlaceholder = "AppStrings.TraceLocations.Configuration.descriptionPlaceholder"
			static let addressPlaceholder = "AppStrings.TraceLocations.Configuration.addressPlaceholder"
			static let temporaryDefaultLengthTitleLabel = "AppStrings.TraceLocations.Configuration.temporaryDefaultLengthTitleLabel"
			static let temporaryDefaultLengthFootnoteLabel = "AppStrings.TraceLocations.Configuration.temporaryDefaultLengthFootnoteLabel"
			static let permanentDefaultLengthTitleLabel = "AppStrings.TraceLocations.Configuration.permanentDefaultLengthTitleLabel"
			static let permanentDefaultLengthValueLabel = "AppStrings.TraceLocations.Configuration.permanentDefaultLengthValueLabel"
			static let permanentDefaultLengthFootnoteLabel = "AppStrings.TraceLocations.Configuration.permanentDefaultLengthFootnoteLabel"
			static let eventTableViewCellButton = "AppStrings.TraceLocations.Configuration.eventTableViewCellButton"
		}
	}

	enum Checkin {
		
		enum Overview {
...
